@@ -16,6 +16,8 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexMetadataVerifier;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.version.CompatibilityVersionsUtils;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.IndexVersion;
@@ -23,7 +25,8 @@ import org.elasticsearch.index.mapper.MapperMetrics;
 import org.elasticsearch.plugins.ClusterCoordinationPlugin;
 import org.elasticsearch.plugins.MetadataUpgrader;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.TestCustomMetadata;
+import org.elasticsearch.test.TestClusterCustomMetadata;
+import org.elasticsearch.test.TestProjectCustomMetadata;
 
 import java.io.IOException;
 import java.util.Arrays;
@@ -31,13 +34,23 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.UnaryOperator;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 
 public class GatewayMetaStateTests extends ESTestCase {
+
+    private ProjectId projectId;
+
+    @Override
+    public void setUp() throws Exception {
+        super.setUp();
+        projectId = randomProjectIdOrDefault();
+    }
 
     public void testUpdateTemplateMetadataOnUpgrade() {
         Metadata metadata = randomMetadata();
@@ -47,28 +60,30 @@ public class GatewayMetaStateTests extends ESTestCase {
                 IndexTemplateMetadata.builder("added_test_template").patterns(randomIndexPatterns()).build()
             );
             return templates;
-        }));
+        }), List.of());
 
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertFalse(Metadata.isGlobalStateEquals(upgrade, metadata));
-        assertTrue(upgrade.templates().containsKey("added_test_template"));
+        assertTrue(upgrade.hasProject(projectId));
+        upgrade.projects()
+            .forEach((projectId, projectMetadata) -> assertTrue(projectMetadata.templates().containsKey("added_test_template")));
     }
 
     public void testNoMetadataUpgrade() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
-        for (IndexMetadata indexMetadata : upgrade) {
-            assertTrue(metadata.hasIndexMetadata(indexMetadata));
+        for (IndexMetadata indexMetadata : upgrade.getProject(projectId)) {
+            assertTrue(metadata.getProject(projectId).hasIndexMetadata(indexMetadata));
         }
     }
 
     public void testCustomMetadataValidation() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         try {
             GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         } catch (IllegalStateException e) {
@@ -78,31 +93,106 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testIndexMetadataUpgrade() {
         Metadata metadata = randomMetadata();
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(true), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
-        for (IndexMetadata indexMetadata : upgrade) {
-            assertFalse(metadata.hasIndexMetadata(indexMetadata));
+        for (IndexMetadata indexMetadata : upgrade.getProject(projectId)) {
+            assertFalse(metadata.getProject(projectId).hasIndexMetadata(indexMetadata));
         }
     }
 
     public void testCustomMetadataNoChange() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new));
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
-        for (IndexMetadata indexMetadata : upgrade) {
-            assertTrue(metadata.hasIndexMetadata(indexMetadata));
+        for (IndexMetadata indexMetadata : upgrade.getProject(projectId)) {
+            assertTrue(metadata.getProject(projectId).hasIndexMetadata(indexMetadata));
         }
+    }
+
+    public void testCustomMetadata_appliesUpgraders() {
+        ProjectCustomMetadata2 custom2 = new ProjectCustomMetadata2("some data");
+        // Test with a ProjectCustomMetadata1 and a ProjectCustomMetadata2...
+        Metadata originalMetadata = Metadata.builder(Metadata.EMPTY_METADATA)
+            .put(
+                ProjectMetadata.builder(projectId)
+                    .putCustom(ProjectCustomMetadata1.TYPE, new ProjectCustomMetadata1("data"))
+                    .putCustom(ProjectCustomMetadata2.TYPE, custom2)
+            )
+            .build();
+        // ...and two sets of upgraders which affect ProjectCustomMetadata1 and some other types...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> customUpgraders = Map.of(
+            ProjectCustomMetadata1.TYPE,
+            toUpgrade -> new ProjectCustomMetadata1("new " + ((ProjectCustomMetadata1) toUpgrade).getData()),
+            "not_" + ProjectCustomMetadata1.TYPE,
+            toUpgrade -> {
+                fail("This upgrader should not be invoked");
+                return toUpgrade;
+            }
+        );
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> moreCustomUpgraders = Map.of(
+            "also_not_" + ProjectCustomMetadata1.TYPE,
+            toUpgrade -> {
+                fail("This upgrader should not be invoked");
+                return toUpgrade;
+            }
+        );
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the ProjectCustomMetadata1 has been upgraded...
+        assertEquals(new ProjectCustomMetadata1("new data"), upgradedMetadata.getProject(projectId).custom(ProjectCustomMetadata1.TYPE));
+        // ...but the ProjectCustomMetadata2 is untouched.
+        assertSame(custom2, upgradedMetadata.getProject(projectId).custom(ProjectCustomMetadata2.TYPE));
+    }
+
+    public void testCustomMetadata_appliesMultipleUpgraders() {
+        // Test with a ProjectCustomMetadata1 and a ProjectCustomMetadata2...
+        Metadata originalMetadata = Metadata.builder(Metadata.EMPTY_METADATA)
+            .put(
+                ProjectMetadata.builder(projectId)
+                    .putCustom(ProjectCustomMetadata1.TYPE, new ProjectCustomMetadata1("data"))
+                    .putCustom(ProjectCustomMetadata2.TYPE, new ProjectCustomMetadata2("other data"))
+            )
+            .build();
+        // ...and a set of upgraders which affects both of those...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> customUpgraders = Map.of(
+            ProjectCustomMetadata1.TYPE,
+            toUpgrade -> new ProjectCustomMetadata1("new " + ((ProjectCustomMetadata1) toUpgrade).getData()),
+            ProjectCustomMetadata2.TYPE,
+            toUpgrade -> new ProjectCustomMetadata2("new " + ((ProjectCustomMetadata2) toUpgrade).getData())
+        );
+        // ...and another set of upgraders which applies a second upgrade to ProjectCustomMetadata2...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> moreCustomUpgraders = Map.of(
+            ProjectCustomMetadata2.TYPE,
+            toUpgrade -> new ProjectCustomMetadata2("more " + ((ProjectCustomMetadata2) toUpgrade).getData())
+        );
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the first upgrader has been applied to the ProjectCustomMetadata1...
+        assertEquals(new ProjectCustomMetadata1("new data"), upgradedMetadata.getProject(projectId).custom(ProjectCustomMetadata1.TYPE));
+        // ...and both upgraders have been applied to the ProjectCustomMetadata2.
+        assertEquals(
+            new ProjectCustomMetadata2("more new other data"),
+            upgradedMetadata.getProject(projectId).custom(ProjectCustomMetadata2.TYPE)
+        );
     }
 
     public void testIndexTemplateValidation() {
         Metadata metadata = randomMetadata();
         MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(customs -> {
             throw new IllegalStateException("template is incompatible");
-        }));
+        }), List.of());
         String message = expectThrows(
             IllegalStateException.class,
             () -> GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader)
@@ -136,17 +226,22 @@ public class GatewayMetaStateTests extends ESTestCase {
                     .build()
             );
             return indexTemplateMetadatas;
-
-        }));
+        }), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertFalse(Metadata.isGlobalStateEquals(upgrade, metadata));
-        assertNotNull(upgrade.templates().get("template1"));
-        assertThat(IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING.get(upgrade.templates().get("template1").settings()), equalTo(20));
-        assertNotNull(upgrade.templates().get("template2"));
-        assertThat(IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING.get(upgrade.templates().get("template2").settings()), equalTo(10));
-        for (IndexMetadata indexMetadata : upgrade) {
-            assertTrue(metadata.hasIndexMetadata(indexMetadata));
+        assertNotNull(upgrade.getProject(projectId).templates().get("template1"));
+        assertThat(
+            IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING.get(upgrade.getProject(projectId).templates().get("template1").settings()),
+            equalTo(20)
+        );
+        assertNotNull(upgrade.getProject(projectId).templates().get("template2"));
+        assertThat(
+            IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING.get(upgrade.getProject(projectId).templates().get("template2").settings()),
+            equalTo(10)
+        );
+        for (IndexMetadata indexMetadata : upgrade.getProject(projectId)) {
+            assertTrue(metadata.getProject(projectId).hasIndexMetadata(indexMetadata));
         }
     }
 
@@ -200,12 +295,16 @@ public class GatewayMetaStateTests extends ESTestCase {
         }
 
         @Override
-        public IndexMetadata verifyIndexMetadata(IndexMetadata indexMetadata, IndexVersion minimumIndexCompatibilityVersion) {
+        public IndexMetadata verifyIndexMetadata(
+            IndexMetadata indexMetadata,
+            IndexVersion minimumIndexCompatibilityVersion,
+            IndexVersion minimumReadOnlyIndexCompatibilityVersion
+        ) {
             return upgrade ? IndexMetadata.builder(indexMetadata).build() : indexMetadata;
         }
     }
 
-    private static class CustomMetadata1 extends TestCustomMetadata {
+    private static class CustomMetadata1 extends TestClusterCustomMetadata {
         public static final String TYPE = "custom_md_1";
 
         CustomMetadata1(String data) {
@@ -228,38 +327,88 @@ public class GatewayMetaStateTests extends ESTestCase {
         }
     }
 
-    private static Metadata randomMetadata(TestCustomMetadata... customMetadatas) {
-        Metadata.Builder builder = Metadata.builder();
-        for (TestCustomMetadata customMetadata : customMetadatas) {
+    private static class ProjectCustomMetadata1 extends TestProjectCustomMetadata {
+        public static final String TYPE = "custom_project_md_1";
+
+        ProjectCustomMetadata1(String data) {
+            super(data);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TYPE;
+        }
+
+        @Override
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
+        }
+
+        @Override
+        public EnumSet<Metadata.XContentContext> context() {
+            return EnumSet.of(Metadata.XContentContext.GATEWAY);
+        }
+    }
+
+    private static class ProjectCustomMetadata2 extends TestProjectCustomMetadata {
+        public static final String TYPE = "custom_project_md_2";
+
+        ProjectCustomMetadata2(String data) {
+            super(data);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TYPE;
+        }
+
+        @Override
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
+        }
+
+        @Override
+        public EnumSet<Metadata.XContentContext> context() {
+            return EnumSet.of(Metadata.XContentContext.GATEWAY);
+        }
+    }
+
+    private Metadata randomMetadata(TestClusterCustomMetadata... customMetadatas) {
+        Metadata.Builder builder = Metadata.builder(Metadata.EMPTY_METADATA);
+        builder.put(ProjectMetadata.builder(projectId));
+        for (TestClusterCustomMetadata customMetadata : customMetadatas) {
             builder.putCustom(customMetadata.getWriteableName(), customMetadata);
         }
         for (int i = 0; i < randomIntBetween(1, 5); i++) {
-            builder.put(
-                IndexMetadata.builder(randomAlphaOfLength(10))
-                    .settings(settings(IndexVersion.current()))
-                    .numberOfReplicas(randomIntBetween(0, 3))
-                    .numberOfShards(randomIntBetween(1, 5))
-            );
+            builder.getProject(projectId)
+                .put(
+                    IndexMetadata.builder(randomAlphaOfLength(10))
+                        .settings(settings(IndexVersion.current()))
+                        .numberOfReplicas(randomIntBetween(0, 3))
+                        .numberOfShards(randomIntBetween(1, 5))
+                );
         }
         return builder.build();
     }
 
-    private static Metadata randomMetadataWithIndexTemplates(String... templates) {
-        Metadata.Builder builder = Metadata.builder();
+    private Metadata randomMetadataWithIndexTemplates(String... templates) {
+        Metadata.Builder builder = Metadata.builder(Metadata.EMPTY_METADATA);
+        builder.put(ProjectMetadata.builder(projectId));
         for (String template : templates) {
             IndexTemplateMetadata templateMetadata = IndexTemplateMetadata.builder(template)
                 .settings(indexSettings(IndexVersion.current(), randomIntBetween(1, 5), randomIntBetween(0, 3)))
                 .patterns(randomIndexPatterns())
                 .build();
-            builder.put(templateMetadata);
+            builder.getProject(projectId).put(templateMetadata);
         }
         for (int i = 0; i < randomIntBetween(1, 5); i++) {
-            builder.put(
-                IndexMetadata.builder(randomAlphaOfLength(10))
-                    .settings(settings(IndexVersion.current()))
-                    .numberOfReplicas(randomIntBetween(0, 3))
-                    .numberOfShards(randomIntBetween(1, 5))
-            );
+            builder.getProject(projectId)
+                .put(
+                    IndexMetadata.builder(randomAlphaOfLength(10))
+                        .settings(settings(IndexVersion.current()))
+                        .numberOfReplicas(randomIntBetween(0, 3))
+                        .numberOfShards(randomIntBetween(1, 5))
+                );
         }
         return builder.build();
     }
