@@ -16,7 +16,9 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.Template;
+import org.elasticsearch.cluster.project.DefaultProjectResolver;
 import org.elasticsearch.cluster.routing.allocation.DataTier;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentHelper;
@@ -48,7 +50,6 @@ import org.junit.Before;
 
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -118,23 +119,21 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 Metadata.builder()
                     .putCustom(
                         IndexLifecycleMetadata.TYPE,
-                        new IndexLifecycleMetadata(
-                            Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                            OperationMode.STOPPED
-                        )
+                        new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                     )
                     .put(IndexMetadata.builder(indexName).settings(getBaseIndexSettings()))
                     .build()
             )
             .build();
 
-        Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-        List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+        List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
         assertThat(migratedPolicies.size(), is(1));
         assertThat(migratedPolicies.get(0), is(lifecycleName));
 
-        ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().custom(IndexLifecycleMetadata.TYPE);
+        ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().getProject().custom(IndexLifecycleMetadata.TYPE);
         LifecyclePolicy lifecyclePolicy = updatedLifecycleMetadata.getPolicies().get(lifecycleName);
         Map<String, LifecycleAction> warmActions = lifecyclePolicy.getPhases().get("warm").getActions();
         assertThat(
@@ -176,7 +175,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -186,23 +185,21 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 Metadata.builder()
                     .putCustom(
                         IndexLifecycleMetadata.TYPE,
-                        new IndexLifecycleMetadata(
-                            Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                            OperationMode.STOPPED
-                        )
+                        new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                     )
                     .put(IndexMetadata.builder(indexName).settings(getBaseIndexSettings()))
                     .build()
             )
             .build();
 
-        Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-        List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+        List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
         assertThat(migratedPolicies.size(), is(1));
         assertThat(migratedPolicies.get(0), is(lifecycleName));
 
-        ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().custom(IndexLifecycleMetadata.TYPE);
+        ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+        IndexLifecycleMetadata updatedLifecycleMetadata = newState.metadata().getProject().custom(IndexLifecycleMetadata.TYPE);
         LifecyclePolicy lifecyclePolicy = updatedLifecycleMetadata.getPolicies().get(lifecycleName);
         Map<String, LifecycleAction> warmActions = lifecyclePolicy.getPhases().get("warm").getActions();
         assertThat(
@@ -245,22 +242,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -302,10 +297,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
                             new IndexLifecycleMetadata(
-                                Collections.singletonMap(
-                                    policyMetadataWithTotalShardsPerNode.getName(),
-                                    policyMetadataWithTotalShardsPerNode
-                                ),
+                                Map.of(policyMetadataWithTotalShardsPerNode.getName(), policyMetadataWithTotalShardsPerNode),
                                 OperationMode.STOPPED
                             )
                         )
@@ -314,12 +306,13 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -352,22 +345,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -406,22 +397,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
             // expecting the phase definition to be refreshed with the index being in the set_priority action
@@ -456,22 +445,20 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder()
                         .putCustom(
                             IndexLifecycleMetadata.TYPE,
-                            new IndexLifecycleMetadata(
-                                Collections.singletonMap(policyMetadata.getName(), policyMetadata),
-                                OperationMode.STOPPED
-                            )
+                            new IndexLifecycleMetadata(Map.of(policyMetadata.getName(), policyMetadata), OperationMode.STOPPED)
                         )
                         .put(indexMetadata)
                         .build()
                 )
                 .build();
 
-            Metadata.Builder newMetadata = Metadata.builder(state.metadata());
-            List<String> migratedPolicies = migrateIlmPolicies(newMetadata, state, "data", REGISTRY, client, null);
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+            List<String> migratedPolicies = migrateIlmPolicies(projectMetadataBuilder, projectMetadata, "data", REGISTRY, client, null);
 
             assertThat(migratedPolicies.get(0), is(lifecycleName));
-            ClusterState newState = ClusterState.builder(state).metadata(newMetadata).build();
-            LifecycleExecutionState newLifecycleState = newState.metadata().index(indexName).getLifecycleExecutionState();
+            ClusterState newState = ClusterState.builder(state).putProjectMetadata(projectMetadataBuilder).build();
+            LifecycleExecutionState newLifecycleState = newState.metadata().getProject().index(indexName).getLifecycleExecutionState();
 
             Map<String, Object> migratedPhaseDefAsMap = getPhaseDefinitionAsMap(newLifecycleState);
 
@@ -532,14 +519,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithWarmDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithWarmDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithWarmDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
         }
@@ -552,14 +540,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithWarmDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithWarmDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithWarmDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
         }
@@ -572,14 +561,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithFrozenDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithFrozenDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithFrozenDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithFrozenDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_frozen"));
         }
@@ -599,14 +589,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -627,14 +618,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -651,14 +643,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
         }
@@ -674,14 +667,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
         }
@@ -697,14 +691,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
@@ -721,14 +716,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_cold,data_warm,data_hot"));
@@ -742,14 +738,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithTierPreferenceAndDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithTierPreferenceAndDataAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithTierPreferenceAndDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithTierPreferenceAndDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
@@ -763,12 +760,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithUnknownDataAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithUnknownDataAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithUnknownDataAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), is("something_else"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
@@ -782,13 +781,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexDataAndBoxAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithDataAndBoxAttribute"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithDataAndBoxAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithDataAndBoxAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("box1"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
@@ -800,12 +801,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .settings(getBaseIndexSettings().put(BOX_ROUTING_REQUIRE_SETTING, "warm"));
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(indexBoxAttribute)).build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithBoxAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithBoxAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("warm"));
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
@@ -818,12 +821,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexNoRoutingAttribute))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexNoRoutingAttribute");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexNoRoutingAttribute");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
@@ -841,13 +846,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 );
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("foo");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(
                 migratedIndex.getSettings().get(TIER_PREFERENCE),
@@ -864,14 +870,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                         .put(SearchableSnapshotsSettings.SNAPSHOT_PARTIAL_SETTING.getKey(), true)
                 );
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             // no index to migrate as the IndexMetadata.Builder#build method adds a tier preference for this partial index
             assertThat(migratedIndices.size(), is(0));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("foo");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("cold"));
             // partially mounted index must remain in `data_frozen`, however we do not change the setting
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is(nullValue()));
@@ -889,13 +896,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 );
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("foo");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is("cold"));
 
             assertThat(
@@ -914,13 +922,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 );
             ClusterState state = ClusterState.builder(ClusterName.DEFAULT).metadata(Metadata.builder().put(partiallyMountedIndex)).build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "box");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "box");
             assertThat(migratedIndices.size(), is(1));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("foo");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("foo");
             assertThat(migratedIndex.getSettings().get(BOX_ROUTING_REQUIRE_SETTING), is(nullValue()));
             // partially mounted index must have _tier_preference and remain in `data_frozen` (despite the cold custom filtering
             // attributed)
@@ -944,14 +953,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithAllRoutingSettings))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithAllRoutingSettings"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithAllRoutingSettings");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithAllRoutingSettings");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_EXCLUDE_SETTING), nullValue());
@@ -970,14 +980,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .metadata(Metadata.builder().put(indexWithAllRoutingSettings))
                 .build();
 
-            Metadata.Builder mb = Metadata.builder(state.metadata());
+            ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(state);
+            ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
 
-            List<String> migratedIndices = migrateIndices(mb, state, "data");
+            List<String> migratedIndices = migrateIndices(projectMetadataBuilder, projectMetadata, "data");
             assertThat(migratedIndices.size(), is(1));
             assertThat(migratedIndices.get(0), is("indexWithAllRoutingSettings"));
 
-            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).metadata(mb).build();
-            IndexMetadata migratedIndex = migratedState.metadata().index("indexWithAllRoutingSettings");
+            ClusterState migratedState = ClusterState.builder(ClusterName.DEFAULT).putProjectMetadata(projectMetadataBuilder).build();
+            IndexMetadata migratedIndex = migratedState.metadata().getProject().index("indexWithAllRoutingSettings");
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_INCLUDE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_REQUIRE_SETTING), nullValue());
             assertThat(migratedIndex.getSettings().get(DATA_ROUTING_EXCLUDE_SETTING), nullValue());
@@ -1008,7 +1019,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyWithDataAttribute = new LifecyclePolicyMetadata(
             policyToMigrate,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -1026,7 +1037,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         );
         LifecyclePolicyMetadata policyWithOtherAttribute = new LifecyclePolicyMetadata(
             shouldntBeMigratedPolicy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -1071,6 +1082,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         {
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 "catch-all",
                 REGISTRY,
@@ -1080,22 +1092,23 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.removedIndexTemplateName, is("catch-all"));
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.removedIndexTemplateName(), is("catch-all"));
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             ClusterState newState = migratedEntitiesTuple.v1();
-            assertThat(newState.metadata().getTemplates().size(), is(1));
-            assertThat(newState.metadata().getTemplates().get("catch-all"), nullValue());
-            assertThat(newState.metadata().getTemplates().get("other-template"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().size(), is(1));
+            assertThat(newState.metadata().getProject().templates().get("catch-all"), nullValue());
+            assertThat(newState.metadata().getProject().templates().get("other-template"), notNullValue());
         }
 
         {
             // let's test a null template name to make sure nothing is removed
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 null,
                 REGISTRY,
@@ -1105,22 +1118,23 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.removedIndexTemplateName, nullValue());
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.removedIndexTemplateName(), nullValue());
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             ClusterState newState = migratedEntitiesTuple.v1();
-            assertThat(newState.metadata().getTemplates().size(), is(2));
-            assertThat(newState.metadata().getTemplates().get("catch-all"), notNullValue());
-            assertThat(newState.metadata().getTemplates().get("other-template"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().size(), is(2));
+            assertThat(newState.metadata().getProject().templates().get("catch-all"), notNullValue());
+            assertThat(newState.metadata().getProject().templates().get("other-template"), notNullValue());
         }
 
         {
             // let's test a null node attribute parameter defaults to "data"
             Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
                 state,
+                DefaultProjectResolver.INSTANCE,
                 null,
                 null,
                 REGISTRY,
@@ -1130,15 +1144,15 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             );
 
             MigratedEntities migratedEntities = migratedEntitiesTuple.v2();
-            assertThat(migratedEntities.migratedPolicies.size(), is(1));
-            assertThat(migratedEntities.migratedPolicies.get(0), is(lifecycleName));
-            assertThat(migratedEntities.migratedIndices.size(), is(2));
-            assertThat(migratedEntities.migratedIndices, hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
+            assertThat(migratedEntities.migratedPolicies().size(), is(1));
+            assertThat(migratedEntities.migratedPolicies().get(0), is(lifecycleName));
+            assertThat(migratedEntities.migratedIndices().size(), is(2));
+            assertThat(migratedEntities.migratedIndices(), hasItems("indexWithWarmDataAttribute", "indexWithUnknownDataAttribute"));
 
             IndexMetadata migratedIndex;
-            migratedIndex = migratedEntitiesTuple.v1().metadata().index("indexWithWarmDataAttribute");
+            migratedIndex = migratedEntitiesTuple.v1().metadata().getProject().index("indexWithWarmDataAttribute");
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_warm,data_hot"));
-            migratedIndex = migratedEntitiesTuple.v1().metadata().index("indexWithUnknownDataAttribute");
+            migratedIndex = migratedEntitiesTuple.v1().metadata().getProject().index("indexWithUnknownDataAttribute");
             assertThat(migratedIndex.getSettings().get(TIER_PREFERENCE), is("data_content"));
         }
     }
@@ -1152,7 +1166,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             IllegalStateException illegalStateException = expectThrows(
                 IllegalStateException.class,
-                () -> migrateToDataTiersRouting(ilmRunningState, "data", "catch-all", REGISTRY, client, null, false)
+                () -> migrateToDataTiersRouting(
+                    ilmRunningState,
+                    DefaultProjectResolver.INSTANCE,
+                    "data",
+                    "catch-all",
+                    REGISTRY,
+                    client,
+                    null,
+                    false
+                )
             );
             assertThat(illegalStateException.getMessage(), is("stop ILM before migrating to data tiers, current state is [RUNNING]"));
         }
@@ -1165,7 +1188,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             IllegalStateException illegalStateException = expectThrows(
                 IllegalStateException.class,
-                () -> migrateToDataTiersRouting(ilmStoppingState, "data", "catch-all", REGISTRY, client, null, false)
+                () -> migrateToDataTiersRouting(
+                    ilmStoppingState,
+                    DefaultProjectResolver.INSTANCE,
+                    "data",
+                    "catch" + "-all",
+                    REGISTRY,
+                    client,
+                    null,
+                    false
+                )
             );
             assertThat(illegalStateException.getMessage(), is("stop ILM before migrating to data tiers, current state is [STOPPING]"));
         }
@@ -1178,6 +1210,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 .build();
             Tuple<ClusterState, MigratedEntities> migratedState = migrateToDataTiersRouting(
                 ilmStoppedState,
+                DefaultProjectResolver.INSTANCE,
                 "data",
                 "catch-all",
                 REGISTRY,
@@ -1185,9 +1218,9 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 null,
                 false
             );
-            assertThat(migratedState.v2().migratedIndices, empty());
-            assertThat(migratedState.v2().migratedPolicies, empty());
-            assertThat(migratedState.v2().removedIndexTemplateName, nullValue());
+            assertThat(migratedState.v2().migratedIndices(), empty());
+            assertThat(migratedState.v2().migratedPolicies(), empty());
+            assertThat(migratedState.v2().removedIndexTemplateName(), nullValue());
         }
     }
 
@@ -1198,7 +1231,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder().putCustom(IndexLifecycleMetadata.TYPE, new IndexLifecycleMetadata(Map.of(), OperationMode.RUNNING))
                 )
                 .build();
-            migrateToDataTiersRouting(ilmRunningState, "data", "catch-all", REGISTRY, client, null, true);
+            migrateToDataTiersRouting(ilmRunningState, DefaultProjectResolver.INSTANCE, "data", "catch-all", REGISTRY, client, null, true);
             // no exceptions
         }
 
@@ -1208,14 +1241,14 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                     Metadata.builder().putCustom(IndexLifecycleMetadata.TYPE, new IndexLifecycleMetadata(Map.of(), OperationMode.STOPPING))
                 )
                 .build();
-            migrateToDataTiersRouting(ilmStoppingState, "data", "catch-all", REGISTRY, client, null, true);
+            migrateToDataTiersRouting(ilmStoppingState, DefaultProjectResolver.INSTANCE, "data", "catch-all", REGISTRY, client, null, true);
             // no exceptions
         }
     }
 
     public void testMigrationDoesNotRemoveComposableTemplates() {
         ComposableIndexTemplate composableIndexTemplate = ComposableIndexTemplate.builder()
-            .indexPatterns(Collections.singletonList("*"))
+            .indexPatterns(List.of("*"))
             .template(new Template(Settings.builder().put(DATA_ROUTING_REQUIRE_SETTING, "hot").build(), null, null))
             .build();
 
@@ -1225,6 +1258,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             .build();
         Tuple<ClusterState, MigratedEntities> migratedEntitiesTuple = migrateToDataTiersRouting(
             clusterState,
+            DefaultProjectResolver.INSTANCE,
             "data",
             composableTemplateName,
             REGISTRY,
@@ -1232,9 +1266,9 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             null,
             false
         );
-        assertThat(migratedEntitiesTuple.v2().removedIndexTemplateName, nullValue());
+        assertThat(migratedEntitiesTuple.v2().removedIndexTemplateName(), nullValue());
         // the composable template still exists, however it was migrated to not use the custom require.data routing setting
-        assertThat(migratedEntitiesTuple.v1().metadata().templatesV2().get(composableTemplateName), is(notNullValue()));
+        assertThat(migratedEntitiesTuple.v1().metadata().getProject().templatesV2().get(composableTemplateName), is(notNullValue()));
     }
 
     public void testMigrationSetsEnforceTierPreferenceToTrue() {
@@ -1244,7 +1278,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
 
         // if the cluster state doesn't mention the setting, it ends up true
         clusterState = ClusterState.builder(ClusterName.DEFAULT).build();
-        migratedEntitiesTuple = migrateToDataTiersRouting(clusterState, null, null, REGISTRY, client, null, false);
+        migratedEntitiesTuple = migrateToDataTiersRouting(
+            clusterState,
+            DefaultProjectResolver.INSTANCE,
+            null,
+            null,
+            REGISTRY,
+            client,
+            null,
+            false
+        );
         assertTrue(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE_SETTING.get(migratedEntitiesTuple.v1().metadata().persistentSettings()));
         assertFalse(migratedEntitiesTuple.v1().metadata().transientSettings().keySet().contains(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE));
 
@@ -1254,7 +1297,16 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
         metadata.persistentSettings(Settings.builder().put(ENFORCE_DEFAULT_TIER_PREFERENCE, randomBoolean()).build());
         metadata.transientSettings(Settings.builder().put(ENFORCE_DEFAULT_TIER_PREFERENCE, randomBoolean()).build());
         clusterState = ClusterState.builder(ClusterName.DEFAULT).metadata(metadata).build();
-        migratedEntitiesTuple = migrateToDataTiersRouting(clusterState, null, null, REGISTRY, client, null, false);
+        migratedEntitiesTuple = migrateToDataTiersRouting(
+            clusterState,
+            DefaultProjectResolver.INSTANCE,
+            null,
+            null,
+            REGISTRY,
+            client,
+            null,
+            false
+        );
         assertTrue(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE_SETTING.get(migratedEntitiesTuple.v1().metadata().persistentSettings()));
         assertFalse(migratedEntitiesTuple.v1().metadata().transientSettings().keySet().contains(DataTier.ENFORCE_DEFAULT_TIER_PREFERENCE));
     }
@@ -1285,7 +1337,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
                 new Phase("cold", TimeValue.ZERO, Map.of(coldAllocateAction.getWriteableName(), coldAllocateAction))
             )
         );
-        return new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong());
+        return new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong());
     }
 
     public void testMigrateLegacyIndexTemplates() {
@@ -1363,10 +1415,12 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
         List<String> migrateLegacyTemplates = MetadataMigrateToDataTiersRoutingService.migrateLegacyTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migrateLegacyTemplates.size(), is(3));
@@ -1379,7 +1433,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, IndexTemplateMetadata> migratedTemplates = mb.build().templates();
+        Map<String, IndexTemplateMetadata> migratedTemplates = projectMetadataBuilder.build().templates();
         assertThat(migratedTemplates.get("template-with-require-routing").settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").settings().size(), is(1));
@@ -1484,10 +1538,12 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
+
         List<String> migratedComposableTemplates = MetadataMigrateToDataTiersRoutingService.migrateComposableTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migratedComposableTemplates.size(), is(3));
@@ -1500,7 +1556,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, ComposableIndexTemplate> migratedTemplates = mb.build().templatesV2();
+        Map<String, ComposableIndexTemplate> migratedTemplates = projectMetadataBuilder.build().templatesV2();
         assertThat(migratedTemplates.get("template-with-require-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").template().settings().size(), is(1));
@@ -1585,10 +1641,11 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
         List<String> migratedComponentTemplates = MetadataMigrateToDataTiersRoutingService.migrateComponentTemplates(
-            mb,
-            clusterState,
+            projectMetadataBuilder,
+            projectMetadata,
             nodeAttrName
         );
         assertThat(migratedComponentTemplates.size(), is(3));
@@ -1601,7 +1658,7 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
         );
 
-        Map<String, ComponentTemplate> migratedTemplates = mb.build().componentTemplates();
+        Map<String, ComponentTemplate> migratedTemplates = projectMetadataBuilder.build().componentTemplates();
         assertThat(migratedTemplates.get("template-with-require-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-include-routing").template().settings().size(), is(1));
         assertThat(migratedTemplates.get("template-with-require-and-include-routing").template().settings().size(), is(1));
@@ -1673,12 +1730,13 @@ public class MetadataMigrateToDataTiersRoutingServiceTests extends ESTestCase {
             )
             .build();
 
-        Metadata.Builder mb = Metadata.builder(clusterState.metadata());
+        ProjectMetadata projectMetadata = DefaultProjectResolver.INSTANCE.getProjectMetadata(clusterState);
+        ProjectMetadata.Builder projectMetadataBuilder = ProjectMetadata.builder(projectMetadata);
         MetadataMigrateToDataTiersRoutingService.MigratedTemplates migratedTemplates = MetadataMigrateToDataTiersRoutingService
-            .migrateIndexAndComponentTemplates(mb, clusterState, nodeAttrName);
-        assertThat(migratedTemplates.migratedLegacyTemplates, is(List.of("template-with-require-routing")));
-        assertThat(migratedTemplates.migratedComposableTemplates, is(List.of("composable-template-with-require-routing")));
-        assertThat(migratedTemplates.migratedComponentTemplates, is(List.of("component-with-require-and-include-routing")));
+            .migrateIndexAndComponentTemplates(projectMetadataBuilder, projectMetadata, nodeAttrName);
+        assertThat(migratedTemplates.migratedLegacyTemplates(), is(List.of("template-with-require-routing")));
+        assertThat(migratedTemplates.migratedComposableTemplates(), is(List.of("composable-template-with-require-routing")));
+        assertThat(migratedTemplates.migratedComponentTemplates(), is(List.of("component-with-require-and-include-routing")));
     }
 
     private String getWarmPhaseDef() {
