@@ -8,14 +8,11 @@
 package org.elasticsearch.xpack.ilm;
 
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.cluster.ClusterName;
-import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
-import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexVersion;
@@ -48,7 +45,6 @@ import org.elasticsearch.xpack.core.ilm.WaitForRolloverReadyStep;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +53,6 @@ import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY;
 import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagement.eligibleToCheckForRefresh;
-import static org.elasticsearch.xpack.core.ilm.PhaseCacheManagement.refreshPhaseDefinition;
 import static org.elasticsearch.xpack.ilm.IndexLifecycleRunnerTests.createOneStepPolicyStepRegistry;
 import static org.elasticsearch.xpack.ilm.IndexLifecycleTransition.moveStateToNextActionAndUpdateCachedPhase;
 import static org.elasticsearch.xpack.ilm.LifecyclePolicyTestsUtils.newTestLifecyclePolicy;
@@ -72,7 +67,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testMoveClusterStateToNextStep() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
         Phase nextPhase = policy.getPhases()
@@ -80,31 +75,24 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .stream()
             .findFirst()
             .orElseThrow(() -> new AssertionError("expected next phase to be present"));
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey(nextPhase.getName(), "next_action", "next_step");
         long now = randomNonNegativeLong();
 
         // test going from null lifecycle settings to next step
-        ClusterState clusterState = buildClusterState(
+        ProjectMetadata project = buildProject(
             indexName,
             Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName()),
             LifecycleExecutionState.builder().build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = project.index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
-        ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
-            index,
-            clusterState,
-            nextStep,
-            () -> now,
-            stepsRegistry,
-            false
-        );
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
 
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
         lifecycleState.setPhase(currentStep.phase());
@@ -116,26 +104,26 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             lifecycleState.setStepInfo(randomAlphaOfLength(20));
         }
 
-        clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
-        newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        index = project.index(indexName).getIndex();
+        newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
     }
 
     public void testMoveClusterStateToNextStepSamePhase() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey("current_phase", "next_action", "next_step");
         long now = randomNonNegativeLong();
 
-        ClusterState clusterState = buildClusterState(
+        ProjectMetadata project = buildProject(
             indexName,
             Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName()),
             LifecycleExecutionState.builder()
@@ -145,17 +133,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
                 .build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = project.index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
-        ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
-            index,
-            clusterState,
-            nextStep,
-            () -> now,
-            stepsRegistry,
-            false
-        );
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
 
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
         lifecycleState.setPhase(currentStep.phase());
@@ -167,26 +148,26 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
 
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName());
 
-        clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
-        newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        index = project.index(indexName).getIndex();
+        newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
     }
 
     public void testMoveClusterStateToNextStepSameAction() {
         String indexName = "my_index";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy("policy")
         );
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStep = new Step.StepKey("current_phase", "current_action", "next_step");
         long now = randomNonNegativeLong();
 
-        ClusterState clusterState = buildClusterState(
+        ProjectMetadata project = buildProject(
             indexName,
             Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName()),
             LifecycleExecutionState.builder()
@@ -196,17 +177,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
                 .build(),
             policyMetadatas
         );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        Index index = project.index(indexName).getIndex();
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry(policy.getName(), new MockStep(nextStep, nextStep));
-        ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
-            index,
-            clusterState,
-            nextStep,
-            () -> now,
-            stepsRegistry,
-            false
-        );
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
 
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
         lifecycleState.setPhase(currentStep.phase());
@@ -218,17 +192,17 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
 
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policy.getName());
 
-        clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        index = clusterState.metadata().index(indexName).getIndex();
-        newClusterState = IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStep, () -> now, stepsRegistry, false);
-        assertClusterStateOnNextStep(clusterState, index, currentStep, nextStep, newClusterState, now);
+        project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        index = project.index(indexName).getIndex();
+        newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStep, () -> now, stepsRegistry, false);
+        assertProjectOnNextStep(project, index, currentStep, nextStep, newProject, now);
     }
 
     public void testSuccessfulValidatedMoveClusterStateToNextStep() {
         String indexName = "my_index";
         String policyName = "my_policy";
         LifecyclePolicy policy = randomValueOtherThanMany(
-            p -> p.getPhases().size() == 0,
+            p -> p.getPhases().isEmpty(),
             () -> LifecyclePolicyTests.randomTestLifecyclePolicy(policyName)
         );
         Phase nextPhase = policy.getPhases()
@@ -236,8 +210,8 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .stream()
             .findFirst()
             .orElseThrow(() -> new AssertionError("expected next phase to be present"));
-        List<LifecyclePolicyMetadata> policyMetadatas = Collections.singletonList(
-            new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
+        List<LifecyclePolicyMetadata> policyMetadatas = List.of(
+            new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong())
         );
         Step.StepKey currentStepKey = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStepKey = new Step.StepKey(nextPhase.getName(), "next_action", "next_step");
@@ -251,17 +225,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setStep(currentStepKey.name());
 
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, policyName);
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
-        ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToStep(
-            index,
-            clusterState,
-            nextStepKey,
-            () -> now,
-            stepRegistry,
-            true
-        );
-        assertClusterStateOnNextStep(clusterState, index, currentStepKey, nextStepKey, newClusterState, now);
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        Index index = project.index(indexName).getIndex();
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToStep(index, project, nextStepKey, () -> now, stepRegistry, true);
+        assertProjectOnNextStep(project, index, currentStepKey, nextStepKey, newProject, now);
     }
 
     public void testValidatedMoveClusterStateToNextStepWithoutPolicy() {
@@ -279,11 +246,11 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStepKey.action());
         lifecycleState.setStep(currentStepKey.name());
 
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
+        Index index = project.index(indexName).getIndex();
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStepKey, () -> now, stepRegistry, true)
+            () -> IndexLifecycleTransition.moveIndexToStep(index, project, nextStepKey, () -> now, stepRegistry, true)
         );
         assertThat(exception.getMessage(), equalTo("index [my_index] is not associated with an Index Lifecycle Policy"));
     }
@@ -303,18 +270,18 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStepKey.action());
         lifecycleState.setStep(currentStepKey.name());
 
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
+        Index index = project.index(indexName).getIndex();
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToStep(index, clusterState, nextStepKey, () -> now, stepRegistry, true)
+            () -> IndexLifecycleTransition.moveIndexToStep(index, project, nextStepKey, () -> now, stepRegistry, true)
         );
         assertThat(exception.getMessage(), equalTo("""
             step [{"phase":"next_phase","action":"next_action","name":"next_step"}] \
             for index [my_index] with policy [my_policy] does not exist"""));
     }
 
-    public void testMoveClusterStateToErrorStep() throws IOException {
+    public void testMoveIndexToErrorStep() throws IOException {
         String indexName = "my_index";
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         Step.StepKey nextStepKey = new Step.StepKey("next_phase", "next_action", "next_step");
@@ -325,32 +292,32 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(currentStep.phase());
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
-        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ProjectMetadata project = buildProject(indexName, Settings.builder(), lifecycleState.build(), List.of());
+        Index index = project.index(indexName).getIndex();
 
-        ClusterState newClusterState = IndexLifecycleTransition.moveClusterStateToErrorStep(
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToErrorStep(
             index,
-            clusterState,
+            project,
             cause,
             () -> now,
             (idxMeta, stepKey) -> new MockStep(stepKey, nextStepKey)
         );
-        assertClusterStateOnErrorStep(clusterState, index, currentStep, newClusterState, now, """
+        assertProjectOnErrorStep(project, index, currentStep, newProject, now, """
             {"type":"exception","reason":"THIS IS AN EXPECTED CAUSE\"""");
 
         cause = new IllegalArgumentException("non elasticsearch-exception");
-        newClusterState = IndexLifecycleTransition.moveClusterStateToErrorStep(
+        newProject = IndexLifecycleTransition.moveIndexToErrorStep(
             index,
-            clusterState,
+            project,
             cause,
             () -> now,
             (idxMeta, stepKey) -> new MockStep(stepKey, nextStepKey)
         );
-        assertClusterStateOnErrorStep(clusterState, index, currentStep, newClusterState, now, """
+        assertProjectOnErrorStep(project, index, currentStep, newProject, now, """
             {"type":"illegal_argument_exception","reason":"non elasticsearch-exception\"""");
     }
 
-    public void testAddStepInfoToClusterState() throws IOException {
+    public void testAddStepInfoToProject() throws IOException {
         String indexName = "my_index";
         Step.StepKey currentStep = new Step.StepKey("current_phase", "current_action", "current_step");
         RandomStepInfo stepInfo = new RandomStepInfo(() -> randomAlphaOfLength(10));
@@ -359,12 +326,12 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(currentStep.phase());
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
-        ClusterState clusterState = buildClusterState(indexName, Settings.builder(), lifecycleState.build(), Collections.emptyList());
-        Index index = clusterState.metadata().index(indexName).getIndex();
-        ClusterState newClusterState = IndexLifecycleTransition.addStepInfoToClusterState(index, clusterState, stepInfo);
-        assertClusterStateStepInfo(clusterState, index, currentStep, newClusterState, stepInfo);
-        ClusterState runAgainClusterState = IndexLifecycleTransition.addStepInfoToClusterState(index, newClusterState, stepInfo);
-        assertSame(newClusterState, runAgainClusterState);
+        ProjectMetadata project = buildProject(indexName, Settings.builder(), lifecycleState.build(), List.of());
+        Index index = project.index(indexName).getIndex();
+        ProjectMetadata newProject = IndexLifecycleTransition.addStepInfoToProject(index, project, stepInfo);
+        assertProjectStepInfo(project, index, currentStep, newProject, stepInfo);
+        ProjectMetadata runAgainProject = IndexLifecycleTransition.addStepInfoToProject(index, newProject, stepInfo);
+        assertSame(newProject, runAgainProject);
     }
 
     public void testRemovePolicyForIndex() {
@@ -378,43 +345,36 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        Index index = project.index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
-        ClusterState newClusterState = IndexLifecycleTransition.removePolicyForIndexes(indices, clusterState, failedIndexes);
+        ProjectMetadata newProject = IndexLifecycleTransition.removePolicyForIndexes(indices, project, failedIndexes);
 
         assertTrue(failedIndexes.isEmpty());
-        assertIndexNotManagedByILM(newClusterState, index);
+        assertIndexNotManagedByILM(newProject, index);
     }
 
     public void testRemovePolicyForIndexNoCurrentPolicy() {
         String indexName = randomAlphaOfLength(10);
         Settings.Builder indexSettingsBuilder = Settings.builder();
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            LifecycleExecutionState.builder().build(),
-            Collections.emptyList()
-        );
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, LifecycleExecutionState.builder().build(), List.of());
+        Index index = project.index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
-        ClusterState newClusterState = IndexLifecycleTransition.removePolicyForIndexes(indices, clusterState, failedIndexes);
+        ProjectMetadata newProject = IndexLifecycleTransition.removePolicyForIndexes(indices, project, failedIndexes);
 
         assertTrue(failedIndexes.isEmpty());
-        assertIndexNotManagedByILM(newClusterState, index);
+        assertIndexNotManagedByILM(newProject, index);
     }
 
     public void testRemovePolicyForIndexIndexDoesntExist() {
         String indexName = randomAlphaOfLength(10);
         String oldPolicyName = "old_policy";
-        LifecyclePolicy oldPolicy = newTestLifecyclePolicy(oldPolicyName, Collections.emptyMap());
+        LifecyclePolicy oldPolicy = newTestLifecyclePolicy(oldPolicyName, Map.of());
         Step.StepKey currentStep = AbstractStepTestCase.randomStepKey();
         Settings.Builder indexSettingsBuilder = Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, oldPolicyName);
         LifecycleExecutionState.Builder lifecycleState = LifecycleExecutionState.builder();
@@ -422,19 +382,17 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
         Index index = new Index("doesnt_exist", "im_not_here");
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
-        ClusterState newClusterState = IndexLifecycleTransition.removePolicyForIndexes(indices, clusterState, failedIndexes);
+        ProjectMetadata newProject = IndexLifecycleTransition.removePolicyForIndexes(indices, project, failedIndexes);
 
         assertEquals(1, failedIndexes.size());
         assertEquals("doesnt_exist", failedIndexes.get(0));
-        assertSame(clusterState, newClusterState);
+        assertSame(project, newProject);
     }
 
     public void testRemovePolicyForIndexIndexInUnsafe() {
@@ -448,18 +406,16 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        Index index = project.index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
-        ClusterState newClusterState = IndexLifecycleTransition.removePolicyForIndexes(indices, clusterState, failedIndexes);
+        ProjectMetadata newProject = IndexLifecycleTransition.removePolicyForIndexes(indices, project, failedIndexes);
 
         assertTrue(failedIndexes.isEmpty());
-        assertIndexNotManagedByILM(newClusterState, index);
+        assertIndexNotManagedByILM(newProject, index);
     }
 
     public void testRemovePolicyWithIndexingComplete() {
@@ -475,18 +431,16 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(currentStep.action());
         lifecycleState.setStep(currentStep.name());
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(oldPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
-        Index index = clusterState.metadata().index(indexName).getIndex();
+        policyMetadatas.add(new LifecyclePolicyMetadata(oldPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), policyMetadatas);
+        Index index = project.index(indexName).getIndex();
         Index[] indices = new Index[] { index };
         List<String> failedIndexes = new ArrayList<>();
 
-        ClusterState newClusterState = IndexLifecycleTransition.removePolicyForIndexes(indices, clusterState, failedIndexes);
+        ProjectMetadata newProject = IndexLifecycleTransition.removePolicyForIndexes(indices, project, failedIndexes);
 
         assertTrue(failedIndexes.isEmpty());
-        assertIndexNotManagedByILM(newClusterState, index);
+        assertIndexNotManagedByILM(newProject, index);
     }
 
     public void testValidateTransitionThrowsExceptionForMissingIndexPolicy() {
@@ -756,7 +710,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -771,22 +725,17 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setStepTime(now);
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
-        Index index = clusterState.metadata().index(indexName).getIndex();
-        ClusterState nextClusterState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(
-            clusterState,
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
+        Index index = project.index(indexName).getIndex();
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(
+            project,
             indexName,
             () -> now,
             policyRegistry,
             false
         );
-        IndexLifecycleRunnerTests.assertClusterStateOnNextStep(clusterState, index, errorStepKey, failedStepKey, nextClusterState, now);
-        LifecycleExecutionState executionState = nextClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        assertClusterStateOnNextStep(project, index, errorStepKey, failedStepKey, newProject, now);
+        LifecycleExecutionState executionState = newProject.index(indexName).getLifecycleExecutionState();
         assertThat("manual move to failed step should not count as a retry", executionState.failedStepRetryCount(), is(nullValue()));
     }
 
@@ -802,7 +751,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -817,15 +766,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setStepTime(now);
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
+            () -> IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(project, indexName, () -> now, policyRegistry, false)
         );
         assertThat(
             exception.getMessage(),
@@ -836,15 +780,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
     public void testMoveClusterStateToFailedStepIndexNotFound() {
         String existingIndexName = "my_index";
         String invalidIndexName = "does_not_exist";
-        ClusterState clusterState = buildClusterState(
-            existingIndexName,
-            Settings.builder(),
-            LifecycleExecutionState.builder().build(),
-            Collections.emptyList()
-        );
+        ProjectMetadata project = buildProject(existingIndexName, Settings.builder(), LifecycleExecutionState.builder().build(), List.of());
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, invalidIndexName, () -> 0L, null, false)
+            () -> IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(project, invalidIndexName, () -> 0L, null, false)
         );
         assertThat(exception.getMessage(), equalTo("index [" + invalidIndexName + "] does not exist"));
     }
@@ -863,10 +802,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setAction(errorStepKey.action());
         lifecycleState.setStep(errorStepKey.name());
         lifecycleState.setFailedStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
+            () -> IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(project, indexName, () -> now, policyRegistry, false)
         );
         assertThat(exception.getMessage(), equalTo("index [" + indexName + "] is not associated with an Index Lifecycle Policy"));
     }
@@ -883,10 +822,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setPhase(failedStepKey.phase());
         lifecycleState.setAction(failedStepKey.action());
         lifecycleState.setStep(failedStepKey.name());
-        ClusterState clusterState = buildClusterState(indexName, indexSettingsBuilder, lifecycleState.build(), Collections.emptyList());
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of());
         IllegalArgumentException exception = expectThrows(
             IllegalArgumentException.class,
-            () -> IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(clusterState, indexName, () -> now, policyRegistry, false)
+            () -> IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(project, indexName, () -> now, policyRegistry, false)
         );
         assertThat(
             exception.getMessage(),
@@ -896,7 +835,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         );
     }
 
-    public void testMoveClusterStateToPreviouslyFailedStepAsAutomaticRetryAndSetsPreviousStepInfo() {
+    public void testMoveIndexToPreviouslyFailedStepAsAutomaticRetryAndSetsPreviousStepInfo() {
         String indexName = "my_index";
         String policyName = "my_policy";
         long now = randomNonNegativeLong();
@@ -906,7 +845,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         LifecyclePolicy policy = createPolicy(policyName, failedStepKey, null);
         LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(
             policy,
-            Collections.emptyMap(),
+            Map.of(),
             randomNonNegativeLong(),
             randomNonNegativeLong()
         );
@@ -923,22 +862,17 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         lifecycleState.setFailedStep(failedStepKey.name());
         String initialStepInfo = randomAlphaOfLengthBetween(10, 50);
         lifecycleState.setStepInfo(initialStepInfo);
-        ClusterState clusterState = buildClusterState(
-            indexName,
-            indexSettingsBuilder,
-            lifecycleState.build(),
-            Collections.singletonList(policyMetadata)
-        );
-        Index index = clusterState.metadata().index(indexName).getIndex();
-        ClusterState nextClusterState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(
-            clusterState,
+        ProjectMetadata project = buildProject(indexName, indexSettingsBuilder, lifecycleState.build(), List.of(policyMetadata));
+        Index index = project.index(indexName).getIndex();
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(
+            project,
             indexName,
             () -> now,
             policyRegistry,
             true
         );
-        IndexLifecycleRunnerTests.assertClusterStateOnNextStep(clusterState, index, errorStepKey, failedStepKey, nextClusterState, now);
-        LifecycleExecutionState executionState = nextClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        assertClusterStateOnNextStep(project, index, errorStepKey, failedStepKey, newProject, now);
+        LifecycleExecutionState executionState = newProject.index(indexName).getLifecycleExecutionState();
         assertThat(executionState.failedStepRetryCount(), is(1));
         assertThat(executionState.previousStepInfo(), is(initialStepInfo));
     }
@@ -976,107 +910,36 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         Map<String, LifecycleAction> actions = new HashMap<>();
         actions.put("set_priority", new SetPriorityAction(100));
         Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
+        Map<String, Phase> phases = Map.of("hot", hotPhase);
         LifecyclePolicy currentPolicy = new LifecyclePolicy("my-policy", phases);
 
         List<LifecyclePolicyMetadata> policyMetadatas = new ArrayList<>();
-        policyMetadatas.add(
-            new LifecyclePolicyMetadata(currentPolicy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-        );
+        policyMetadatas.add(new LifecyclePolicyMetadata(currentPolicy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
 
         Step.StepKey errorStepKey = new Step.StepKey("hot", RolloverAction.NAME, ErrorStep.NAME);
         PolicyStepsRegistry stepsRegistry = createOneStepPolicyStepRegistry("my-policy", new ErrorStep(errorStepKey));
 
-        ClusterState clusterState = buildClusterState(
+        ProjectMetadata project = buildProject(
             indexName,
             Settings.builder().put(LifecycleSettings.LIFECYCLE_NAME, "my-policy"),
             currentExecutionState.build(),
             policyMetadatas
         );
-        ClusterState newState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(
-            clusterState,
+        ProjectMetadata newProject = IndexLifecycleTransition.moveIndexToPreviouslyFailedStep(
+            project,
             indexName,
             ESTestCase::randomNonNegativeLong,
             stepsRegistry,
             false
         );
 
-        LifecycleExecutionState nextLifecycleExecutionState = newState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState nextLifecycleExecutionState = newProject.index(indexName).getLifecycleExecutionState();
         assertThat(
             "we musn't refresh the cache definition if the failed step is not part of the real policy anymore",
             nextLifecycleExecutionState.phaseDefinition(),
             is(initialPhaseDefinition)
         );
         assertThat(nextLifecycleExecutionState.step(), is(failedStep));
-    }
-
-    public void testRefreshPhaseJson() throws IOException {
-        LifecycleExecutionState.Builder exState = LifecycleExecutionState.builder()
-            .setPhase("hot")
-            .setAction("rollover")
-            .setStep("check-rollover-ready")
-            .setPhaseDefinition("""
-                {
-                  "policy" : "my-policy",
-                  "phase_definition" : {
-                    "min_age" : "20m",
-                    "actions" : {
-                      "rollover" : {
-                        "max_age" : "5s"
-                      },
-                      "set_priority" : {
-                        "priority" : 150
-                      }
-                    }
-                  },
-                  "version" : 1,
-                  "modified_date_in_millis" : 1578521007076
-                }""");
-
-        IndexMetadata meta = buildIndexMetadata("my-policy", exState);
-        String index = meta.getIndex().getName();
-
-        Map<String, LifecycleAction> actions = new HashMap<>();
-        actions.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
-        actions.put("set_priority", new SetPriorityAction(100));
-        Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
-        LifecyclePolicy newPolicy = new LifecyclePolicy("my-policy", phases);
-        LifecyclePolicyMetadata policyMetadata = new LifecyclePolicyMetadata(newPolicy, Collections.emptyMap(), 2L, 2L);
-
-        ClusterState existingState = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .metadata(Metadata.builder(Metadata.EMPTY_METADATA).put(meta, false).build())
-            .build();
-
-        ClusterState changedState = refreshPhaseDefinition(existingState, index, policyMetadata);
-
-        IndexMetadata newIdxMeta = changedState.metadata().index(index);
-        LifecycleExecutionState afterExState = newIdxMeta.getLifecycleExecutionState();
-        Map<String, String> beforeState = new HashMap<>(exState.build().asMap());
-        beforeState.remove("phase_definition");
-        Map<String, String> afterState = new HashMap<>(afterExState.asMap());
-        afterState.remove("phase_definition");
-        // Check that no other execution state changes have been made
-        assertThat(beforeState, equalTo(afterState));
-
-        // Check that the phase definition has been refreshed
-        assertThat(afterExState.phaseDefinition(), equalTo(XContentHelper.stripWhitespace("""
-            {
-              "policy": "my-policy",
-              "phase_definition": {
-                "min_age": "0ms",
-                "actions": {
-                  "rollover": {
-                    "max_docs": 1
-                  },
-                  "set_priority": {
-                    "priority": 100
-                  }
-                }
-              },
-              "version": 2,
-              "modified_date_in_millis": 2
-            }""")));
     }
 
     public void testEligibleForRefresh() {
@@ -1185,7 +1048,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         actions.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
         actions.put("set_priority", new SetPriorityAction(100));
         Phase hotPhase = new Phase("hot", TimeValue.ZERO, actions);
-        Map<String, Phase> phases = Collections.singletonMap("hot", hotPhase);
+        Map<String, Phase> phases = Map.of("hot", hotPhase);
         LifecyclePolicy currentPolicy = new LifecyclePolicy("my-policy", phases);
 
         {
@@ -1195,10 +1058,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             Map<String, LifecycleAction> actionsWithoutRollover = new HashMap<>();
             actionsWithoutRollover.put("set_priority", new SetPriorityAction(100));
             Phase hotPhaseNoRollover = new Phase("hot", TimeValue.ZERO, actionsWithoutRollover);
-            Map<String, Phase> phasesNoRollover = Collections.singletonMap("hot", hotPhaseNoRollover);
+            Map<String, Phase> phasesNoRollover = Map.of("hot", hotPhaseNoRollover);
             LifecyclePolicyMetadata updatedPolicyMetadata = new LifecyclePolicyMetadata(
                 new LifecyclePolicy("my-policy", phasesNoRollover),
-                Collections.emptyMap(),
+                Map.of(),
                 2L,
                 2L
             );
@@ -1233,10 +1096,10 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             Map<String, LifecycleAction> actionsWitoutSetPriority = new HashMap<>();
             actionsWitoutSetPriority.put("rollover", new RolloverAction(null, null, null, 1L, null, null, null, null, null, null));
             Phase hotPhaseNoSetPriority = new Phase("hot", TimeValue.ZERO, actionsWitoutSetPriority);
-            Map<String, Phase> phasesWithoutSetPriority = Collections.singletonMap("hot", hotPhaseNoSetPriority);
+            Map<String, Phase> phasesWithoutSetPriority = Map.of("hot", hotPhaseNoSetPriority);
             LifecyclePolicyMetadata updatedPolicyMetadata = new LifecyclePolicyMetadata(
                 new LifecyclePolicy("my-policy", phasesWithoutSetPriority),
-                Collections.emptyMap(),
+                Map.of(),
                 2L,
                 2L
             );
@@ -1275,7 +1138,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             assert unsafeStep == null || safeStep.phase().equals(unsafeStep.phase()) == false
                 : "safe and unsafe actions must be in different phases";
             Map<String, LifecycleAction> actions = new HashMap<>();
-            List<Step> steps = Collections.singletonList(new MockStep(safeStep, null));
+            List<Step> steps = List.of(new MockStep(safeStep, null));
             MockAction safeAction = new MockAction(steps, true);
             actions.put(safeAction.getWriteableName(), safeAction);
             Phase phase = new Phase(safeStep.phase(), TimeValue.timeValueMillis(0), actions);
@@ -1284,7 +1147,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         if (unsafeStep != null) {
             assert MockAction.NAME.equals(unsafeStep.action()) : "The unsafe action needs to be MockAction.NAME";
             Map<String, LifecycleAction> actions = new HashMap<>();
-            List<Step> steps = Collections.singletonList(new MockStep(unsafeStep, null));
+            List<Step> steps = List.of(new MockStep(unsafeStep, null));
             MockAction unsafeAction = new MockAction(steps, false);
             actions.put(unsafeAction.getWriteableName(), unsafeAction);
             Phase phase = new Phase(unsafeStep.phase(), TimeValue.timeValueMillis(0), actions);
@@ -1293,7 +1156,7 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         return newTestLifecyclePolicy(policyName, phases);
     }
 
-    private ClusterState buildClusterState(
+    private ProjectMetadata buildProject(
         String indexName,
         Settings.Builder indexSettingsBuilder,
         LifecycleExecutionState lifecycleState,
@@ -1312,18 +1175,14 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .collect(Collectors.toMap(LifecyclePolicyMetadata::getName, Function.identity()));
         IndexLifecycleMetadata indexLifecycleMetadata = new IndexLifecycleMetadata(lifecyclePolicyMetadatasMap, OperationMode.RUNNING);
 
-        Metadata metadata = Metadata.builder()
+        return ProjectMetadata.builder(randomProjectIdOrDefault())
             .put(indexMetadata, true)
             .putCustom(IndexLifecycleMetadata.TYPE, indexLifecycleMetadata)
             .build();
-        return ClusterState.builder(new ClusterName("my_cluster")).metadata(metadata).build();
     }
 
-    public static void assertIndexNotManagedByILM(ClusterState clusterState, Index index) {
-        Metadata metadata = clusterState.metadata();
-        assertNotNull(metadata);
-
-        IndexMetadata indexMetadata = metadata.getIndexSafe(index);
+    public static void assertIndexNotManagedByILM(ProjectMetadata project, Index index) {
+        IndexMetadata indexMetadata = project.getIndexSafe(index);
         assertNotNull(indexMetadata);
 
         assertNull(indexMetadata.getLifecyclePolicyName());
@@ -1333,23 +1192,22 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertFalse(LifecycleSettings.LIFECYCLE_NAME_SETTING.exists(indexSettings));
         assertFalse(RolloverAction.LIFECYCLE_ROLLOVER_ALIAS_SETTING.exists(indexSettings));
         assertFalse(LifecycleSettings.LIFECYCLE_INDEXING_COMPLETE_SETTING.exists(indexSettings));
+        assertFalse(LifecycleSettings.LIFECYCLE_SKIP_SETTING.exists(indexSettings));
     }
 
-    public static void assertClusterStateOnNextStep(
-        ClusterState oldClusterState,
+    public static void assertProjectOnNextStep(
+        ProjectMetadata oldProject,
         Index index,
         Step.StepKey currentStep,
         Step.StepKey nextStep,
-        ClusterState newClusterState,
+        ProjectMetadata newProject,
         long now
     ) {
-        assertNotSame(oldClusterState, newClusterState);
-        Metadata newMetadata = newClusterState.metadata();
-        assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        assertNotSame(oldProject, newProject);
+        IndexMetadata newIndexMetadata = newProject.getIndexSafe(index);
+        assertNotSame(oldProject.index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newProject.index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldProject.index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(nextStep.phase(), newLifecycleState.phase());
         assertEquals(nextStep.action(), newLifecycleState.action());
@@ -1386,21 +1244,19 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
             .build();
     }
 
-    private void assertClusterStateOnErrorStep(
-        ClusterState oldClusterState,
+    private static void assertProjectOnErrorStep(
+        ProjectMetadata oldProject,
         Index index,
         Step.StepKey currentStep,
-        ClusterState newClusterState,
+        ProjectMetadata newProject,
         long now,
         String expectedCauseValue
     ) {
-        assertNotSame(oldClusterState, newClusterState);
-        Metadata newMetadata = newClusterState.metadata();
-        assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        assertNotSame(oldProject, newProject);
+        IndexMetadata newIndexMetadata = newProject.getIndexSafe(index);
+        assertNotSame(oldProject.index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newProject.index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldProject.index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(currentStep.phase(), newLifecycleState.phase());
         assertEquals(currentStep.action(), newLifecycleState.action());
@@ -1412,23 +1268,21 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertEquals(now, newLifecycleState.stepTime().longValue());
     }
 
-    private void assertClusterStateStepInfo(
-        ClusterState oldClusterState,
+    private static void assertProjectStepInfo(
+        ProjectMetadata oldProject,
         Index index,
         Step.StepKey currentStep,
-        ClusterState newClusterState,
+        ProjectMetadata newProject,
         ToXContentObject stepInfo
     ) throws IOException {
         XContentBuilder stepInfoXContentBuilder = JsonXContent.contentBuilder();
         stepInfo.toXContent(stepInfoXContentBuilder, ToXContent.EMPTY_PARAMS);
         String expectedstepInfoValue = BytesReference.bytes(stepInfoXContentBuilder).utf8ToString();
-        assertNotSame(oldClusterState, newClusterState);
-        Metadata newMetadata = newClusterState.metadata();
-        assertNotSame(oldClusterState.metadata(), newMetadata);
-        IndexMetadata newIndexMetadata = newMetadata.getIndexSafe(index);
-        assertNotSame(oldClusterState.metadata().index(index), newIndexMetadata);
-        LifecycleExecutionState newLifecycleState = newClusterState.metadata().index(index).getLifecycleExecutionState();
-        LifecycleExecutionState oldLifecycleState = oldClusterState.metadata().index(index).getLifecycleExecutionState();
+        assertNotSame(oldProject, newProject);
+        IndexMetadata newIndexMetadata = newProject.getIndexSafe(index);
+        assertNotSame(oldProject.index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newProject.index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldProject.index(index).getLifecycleExecutionState();
         assertNotSame(oldLifecycleState, newLifecycleState);
         assertEquals(currentStep.phase(), newLifecycleState.phase());
         assertEquals(currentStep.action(), newLifecycleState.action());
@@ -1436,6 +1290,37 @@ public class IndexLifecycleTransitionTests extends ESTestCase {
         assertEquals(expectedstepInfoValue, newLifecycleState.stepInfo());
         assertEquals(oldLifecycleState.phaseTime(), newLifecycleState.phaseTime());
         assertEquals(oldLifecycleState.actionTime(), newLifecycleState.actionTime());
-        assertEquals(newLifecycleState.stepTime(), newLifecycleState.stepTime());
+        assertEquals(oldLifecycleState.stepTime(), newLifecycleState.stepTime());
+    }
+
+    static void assertClusterStateOnNextStep(
+        ProjectMetadata oldProject,
+        Index index,
+        Step.StepKey currentStep,
+        Step.StepKey nextStep,
+        ProjectMetadata newProject,
+        long now
+    ) {
+        IndexMetadata newIndexMetadata = newProject.getIndexSafe(index);
+        assertNotSame(oldProject.index(index), newIndexMetadata);
+        LifecycleExecutionState newLifecycleState = newProject.index(index).getLifecycleExecutionState();
+        LifecycleExecutionState oldLifecycleState = oldProject.index(index).getLifecycleExecutionState();
+        assertNotSame(oldLifecycleState, newLifecycleState);
+        assertEquals(nextStep.phase(), newLifecycleState.phase());
+        assertEquals(nextStep.action(), newLifecycleState.action());
+        assertEquals(nextStep.name(), newLifecycleState.step());
+        if (currentStep.phase().equals(nextStep.phase())) {
+            assertEquals(oldLifecycleState.phaseTime(), newLifecycleState.phaseTime());
+        } else {
+            assertEquals(now, newLifecycleState.phaseTime().longValue());
+        }
+        if (currentStep.action().equals(nextStep.action())) {
+            assertEquals(oldLifecycleState.actionTime(), newLifecycleState.actionTime());
+        } else {
+            assertEquals(now, newLifecycleState.actionTime().longValue());
+        }
+        assertEquals(now, newLifecycleState.stepTime().longValue());
+        assertEquals(null, newLifecycleState.failedStep());
+        assertEquals(null, newLifecycleState.stepInfo());
     }
 }
